【优化】增加过滤，查找功能